--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.ignoreWords": ["imdb", "moviesapi", "watchlist"]
+  "cSpell.ignoreWords": ["imdb", "moviesapi", "sigmar", "watchlist"]
 }
