feat (processBar ) : add processBar for loading

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "cSpell.ignoreWords": ["imdb", "metascore", "moviesapi", "sigmar", "singlemovie", "watchlist"]
+  "cSpell.ignoreWords": [
+    "imdb",
+    "metascore",
+    "moviesapi",
+    "nextjs",
+    "sigmar",
+    "singlemovie",
+    "watchlist"
+  ]
 }
