--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "next": "13.4.4",
+    "nextjs-progressbar": "^0.0.16",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
